%% CONCEPT-CLASS17
classDiagram
  class SecondhandProduct {
    +identifier: String
    +state: String
  }
  class OrderInfo {
    +identifier: String
    +state: String
  }
  class OrderItem {
    +identifier: String
    +state: String
  }
  SecondhandProduct "1" --> "0..*" OrderInfo : 关联
  OrderInfo "0..*" --> "1" OrderItem : 产生/归属
